--- a/app/GuardianAngel/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/GuardianAngel/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/item_1"
+        android:id="@+id/home"
         android:enabled="true"
         android:icon="@drawable/baseline_home_24"
         android:title="@string/text_label_1"/>
     <item
-        android:id="@+id/item_2"
+        android:id="@+id/details"
         android:enabled="true"
         android:icon="@drawable/user_24"
         android:title="@string/text_label_2"/>
