--- a/app/GuardianAngel/app/src/main/res/layout/profile_user.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/profile_user.xml
@@ -7,11 +7,15 @@
 
     <ImageView
         android:id="@+id/MyCycle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/menstrualcycle_foreground"
-        tools:layout_editor_absoluteX="62dp"
-        tools:layout_editor_absoluteY="619dp" />
+        android:layout_width="97dp"
+        android:layout_height="75dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/divider"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider2"
+        app:layout_constraintVertical_bias="0.5"
+        app:srcCompat="@mipmap/menstrualcycle1" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -52,7 +56,8 @@
         <NumberPicker
             android:id="@+id/num_ft"
             android:layout_width="match_parent"
-            android:layout_height="59dp" />
+            android:layout_height="59dp"
+            android:textSize="28sp" />
 
         <TextView
             android:layout_width="match_parent"
@@ -211,6 +216,39 @@
             android:textSize="28sp" />
 
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/myCalendar"
+        android:layout_width="97dp"
+        android:layout_height="75dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/divider"
+        app:layout_constraintTop_toBottomOf="@+id/divider2"
+        app:layout_constraintVertical_bias="0.5"
+        app:srcCompat="@mipmap/periodcalendar" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="1dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="4dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="409dp"
+        android:layout_height="1dp"
+        android:layout_marginBottom="107dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
