--- a/app/GuardianAngel/app/src/main/res/layout/activity_main.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/activity_main.xml
@@ -2,13 +2,31 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:gravity="center">
+
+
 
     <ImageView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:scaletype="centerCrop"
-        android:src="@drawable/health_bg">
+        android:src="@drawable/health_bg"
+        android:layout_marginBottom="10dp">
     </ImageView>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Get Health Update"
+        android:layout_marginBottom="20dp"/>
+
+    <TextView
+        android:id="@+id/responseTextView"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:textSize="18sp" />
 
 </LinearLayout>
