Show cycle date

--- a/app/GuardianAngel/app/src/main/res/layout/my_cycle.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/my_cycle.xml
@@ -9,10 +9,10 @@
         android:id="@+id/idTVDate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_marginTop="53dp"
         android:gravity="center"
         android:padding="8dp"
-        android:text="Current Date"
+        android:text="Enter dates of your last period"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -21,18 +21,6 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <!--    <CalendarView-->
-    <!--        android:id="@+id/calendarView"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_below="@id/idTVDate"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintHorizontal_bias="0.5"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent"-->
-    <!--        app:layout_constraintVertical_bias="0.5" />-->
 
     <com.prolificinteractive.materialcalendarview.MaterialCalendarView
         android:id="@+id/calendarView"
