Added images assets

--- a/app/GuardianAngel/app/src/main/res/layout/fragment_home.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/fragment_home.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/home_const"
         android:fitsSystemWindows="true"
         >
 
@@ -29,6 +29,16 @@
             android:layout_marginTop="100dp"
             android:background="?android:attr/listDivider"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/currentplace"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="20dp"
+            android:text=" "
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/divider2" />
 
         <com.google.android.gms.maps.MapView
             android:id="@+id/mapView"
@@ -68,12 +78,21 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/suggestion_view"
             android:layout_width="250dp"
             android:layout_height="250dp"
-            android:layout_marginStart="55dp"
+            android:layout_marginStart="32dp"
             android:layout_marginTop="100dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mapView" />
+            app:layout_constraintTop_toBottomOf="@+id/mapView" >
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </androidx.cardview.widget.CardView>
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <FrameLayout
