Android - Initial commit
Signed-off-by: Ashwin Elangovan <ashelangovan@gmail.com>

--- a/app/GuardianAngel/app/src/main/res/layout/activity_main.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -10,5 +11,40 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:menu="@menu/bottom_navigation_menu" />
+
+        <Switch
+            android:id="@+id/toggleSleepWellness"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:layout_marginStart="32dp"
+            android:text="Enable Sleep Wellness" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="32dp"
+        android:text="Select wakeup preference" />
+
+        <Spinner
+            android:id="@+id/spinnerWakeupPreference"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            android:entries="@array/wakeup_preferences"
+            android:prompt="@string/select_wakeup_preference" />
+
+        <Button
+            android:id="@+id/buttonSave"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Save"
+            android:layout_gravity="center_horizontal"/>
+
 
 </LinearLayout>
