--- a/app/GuardianAngel/app/src/main/res/layout/view_main.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/view_main.xml
@@ -52,6 +52,14 @@
             android:textColor="@color/black"
             android:textSize="20sp" />
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:clickable="true"
+            app:srcCompat="@android:drawable/ic_menu_info_details" />
+
 
     </RelativeLayout>
 
