Refactored files and added a couple functionalities
Signed-off-by: Ashwin Elangovan <ashelangovan@gmail.com>

--- a/app/GuardianAngel/app/src/main/res/layout/activity_main.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/activity_main.xml
@@ -15,28 +15,47 @@
         <Switch
             android:id="@+id/toggleSleepWellness"
             android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginStart="32dp"
+            android:switchPadding = "50dp"
+            android:text="Enable Sleep Wellness" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:layout_marginStart="32dp"
-            android:text="Enable Sleep Wellness" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginStart="32dp"
-        android:text="Select wakeup preference" />
+            android:text="Select wakeup preference" />
 
         <Spinner
             android:id="@+id/spinnerWakeupPreference"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_marginTop="16dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:entries="@array/wakeup_preferences"
             android:prompt="@string/select_wakeup_preference" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:layout_marginStart="32dp"
+            android:text="Select approximate sleep time" />
+
+        <TimePicker
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:id="@+id/datePicker1"
+            android:layout_gravity="center"
+            android:timePickerMode="spinner" />
 
         <Button
             android:id="@+id/buttonSave"
