--- a/app/GuardianAngel/app/src/main/res/layout/fragment_more_details.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/fragment_more_details.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <TextView
         android:id="@+id/textView"
-        android:layout_width="150dp"
+        android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="30dp"
@@ -16,16 +14,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <View
-        android:id="@+id/divider"
-        android:layout_width="409dp"
+        android:id="@+id/divider2"
+        android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="120dp"
-        android:layout_marginBottom="32dp"
         android:background="?android:attr/listDivider"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/textView" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/aboutyou"
@@ -38,36 +33,46 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="120dp">
+        android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            android:orientation="vertical"
             tools:context=".MainActivity">
+
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.5450122"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="60dp"
+                android:layout_marginTop="170dp"
                 android:layout_marginEnd="32dp"
-                app:layout_constraintEnd_toStartOf="@+id/textField1"
+                app:layout_constraintEnd_toStartOf="@+id/textField"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/user_24" />
+                app:srcCompat="@drawable/baseline_bloodtype_24" />
 
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textField1"
+                android:id="@+id/textField"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="90dp"
-                android:layout_marginTop="40dp"
-                android:hint="@string/firstname"
+                android:layout_marginTop="150dp"
+                android:hint="@string/blood"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -77,32 +82,42 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textField1"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="90dp"
+                android:layout_marginTop="100dp"
+                android:hint="@string/allergy"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textField">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="320dp"
+                android:layout_marginEnd="32dp"
+                app:layout_constraintEnd_toStartOf="@+id/textField"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/baseline_bloodtype_24" />
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textField2"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="90dp"
-                android:layout_marginTop="100dp"
-                android:hint="@string/lastname"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/textField1">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textField3"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="90dp"
                 android:layout_marginTop="200dp"
-                android:hint="@string/age"
+                android:hint="@string/medical"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/textField1">
+                app:layout_constraintTop_toTopOf="@+id/textField">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -111,50 +126,14 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textField4"
-                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                android:layout_width="135dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="115dp"
-                android:layout_marginTop="200dp"
-                android:hint="@string/gender"
-                app:layout_constraintStart_toStartOf="@+id/textField3"
-                app:layout_constraintTop_toTopOf="@+id/textField1"
-                app:menu="@menu/gender_menu">
-
-                <AutoCompleteTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="none" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textField8"
-                android:layout_width="115dp"
+                android:id="@+id/textField7"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="90dp"
                 android:layout_marginTop="300dp"
-                android:hint="@string/weight"
+                android:hint="@string/medication"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/textField1">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textField9"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="130dp"
-                android:layout_marginTop="300dp"
-                android:hint="@string/height"
-                app:layout_constraintStart_toStartOf="@+id/textField8"
-                app:layout_constraintTop_toTopOf="@+id/textField1">
+                app:layout_constraintTop_toTopOf="@+id/textField">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -164,32 +143,33 @@
 
 
             <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-                android:id="@+id/next_fab"
-                android:layout_width="200dp"
+                android:id="@+id/save_fab"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|end"
 
-                android:layout_marginStart="120dp"
+                android:layout_marginStart="225dp"
                 android:layout_marginTop="400dp"
-                android:contentDescription="@string/next"
-                android:text="@string/next"
+                android:contentDescription="@string/save"
+                android:text="@string/save"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/textField1" />
+                app:layout_constraintTop_toTopOf="@+id/textField" />
 
 
-            <!--        <ImageView-->
-            <!--            android:id="@+id/imageView2"-->
-            <!--            android:layout_width="wrap_content"-->
-            <!--            android:layout_height="wrap_content"-->
-            <!--            android:layout_marginTop="400dp"-->
-            <!--            android:layout_marginEnd="32dp"-->
-            <!--            app:layout_constraintEnd_toStartOf="@+id/textField10"-->
-            <!--            app:layout_constraintTop_toTopOf="@+id/imageView"-->
-            <!--            app:srcCompat="@drawable/baseline_bloodtype_24" />-->
-
-
+            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+                android:id="@+id/back_fab"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_marginStart="105dp"
+                android:layout_marginTop="400dp"
+                android:layout_marginEnd="70dp"
+                android:contentDescription="@string/back"
+                android:text="@string/back"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textField" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.core.widget.NestedScrollView>
 
+    </androidx.core.widget.NestedScrollView>
 
 </RelativeLayout>
