--- a/app/GuardianAngel/app/src/main/res/values/themes.xml
+++ b/app/GuardianAngel/app/src/main/res/values/themes.xml
@@ -6,4 +6,13 @@
     </style>
 
     <style name="Theme.GuardianAngel" parent="Base.Theme.GuardianAngel" />
+
+    <style name="Theme.GuardianAngel.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.GuardianAngel.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.GuardianAngel.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
