--- a/app/GuardianAngel/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/fragment_notifications.xml
@@ -5,11 +5,11 @@
     android:layout_height="match_parent">
     <TextView
         android:id="@+id/textView"
-        android:layout_width="200dp"
+        android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="30dp"
-        android:text="@string/settings"
+        android:text="@string/notification"
         android:textSize="40sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -35,6 +35,7 @@
 
 
             <ListView
+                android:id="@+id/notification_list"
                 android:layout_width="match_parent"
                 android:layout_height="550dp"
                 android:layout_marginStart="20dp"
