Updated UI to using material UI

--- a/app/GuardianAngel/app/src/main/res/layout/fragment_home.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
@@ -22,12 +23,11 @@
         android:background="?android:attr/listDivider"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <!-- Nested Scroll view -->
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp">
+        android:layout_marginTop="50dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,14 +35,73 @@
             android:fitsSystemWindows="true"
             android:orientation="vertical">
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="220dp"
+                android:layout_marginTop="75dp">
 
+                <com.google.android.material.progressindicator.CircularProgressIndicator
+                    android:id="@+id/progressIndicator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:indeterminate="false"
+                    android:max="1000"
+                    android:progress="0"
+                    app:indicatorSize="200dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:trackColor="@color/quantum_deeppurple50"
+                    app:trackCornerRadius="10dp"
+                    app:trackThickness="10dp" />
+
+                <TextView
+                    android:id="@+id/stepsCount"
+                    android:layout_width="92dp"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="48dp"
+                    android:layout_marginBottom="19dp"
+                    android:text="0"
+                    android:textAlignment="center"
+                    android:textSize="34sp"
+                    app:layout_constraintBottom_toTopOf="@+id/view"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <View
+                    android:id="@+id/view"
+                    android:layout_width="150dp"
+                    android:layout_height="4dp"
+                    android:layout_marginBottom="16dp"
+                    android:background="#673AB7"
+                    app:layout_constraintBottom_toTopOf="@+id/goalField"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/stepsCount" />
+
+                <TextView
+                    android:id="@+id/goalField"
+                    android:layout_width="141dp"
+                    android:layout_height="0dp"
+                    android:layout_marginBottom="27dp"
+                    android:text="Goal Not Set"
+                    android:textAlignment="center"
+                    android:textSize="23sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/view" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/card1"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="250dp"
+                android:layout_marginTop="50dp"
                 android:layout_marginEnd="20dp"
                 android:checkable="true"
                 android:clickable="true"
