--- a/app/GuardianAngel/app/src/main/res/layout/activity_steps_monitor.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/activity_steps_monitor.xml
@@ -5,80 +5,88 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/circleBackground"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="55dp"
-        android:layout_marginBottom="79dp"
-        android:background="@drawable/circle"
-        app:layout_constraintBottom_toTopOf="@+id/goalButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
         android:id="@+id/goalButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="122dp"
+        android:layout_marginTop="84dp"
         android:text="Set Goal"
-        app:layout_constraintBottom_toTopOf="@+id/remainderButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/circleBackground" />
+        app:layout_constraintTop_toBottomOf="@+id/progressIndicator" />
 
     <Button
         android:id="@+id/remainderButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="99dp"
+        android:layout_marginBottom="61dp"
         android:text="Send Remainder"
+        app:layout_constraintBottom_toTopOf="@+id/suggestionsButton"
+        app:layout_constraintStart_toStartOf="@+id/suggestionsButton" />
+
+    <Button
+        android:id="@+id/suggestionsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="110dp"
+        android:layout_marginBottom="77dp"
+        android:text="See Suggestions"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/progressIndicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="67dp"
+        android:indeterminate="false"
+        android:max="1000"
+        android:progress="0"
+        app:indicatorSize="200dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/goalField" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:trackColor="@color/quantum_deeppurple50"
+        app:trackCornerRadius="10dp"
+        app:trackThickness="10dp" />
 
     <TextView
         android:id="@+id/stepsCount"
-        android:layout_width="157dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="125dp"
-        android:layout_marginBottom="38dp"
+        android:layout_width="92dp"
+        android:layout_height="37dp"
+        android:layout_marginTop="39dp"
+        android:layout_marginBottom="30dp"
         android:text="0"
         android:textAlignment="center"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/view"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/progressIndicator" />
 
     <View
         android:id="@+id/view"
-        android:layout_width="200dp"
-        android:layout_height="2dp"
-        android:layout_marginBottom="40dp"
-        android:background="#ffffff"
-        app:layout_constraintBottom_toTopOf="@+id/goalField"
+        android:layout_width="152dp"
+        android:layout_height="4dp"
+        android:background="#673AB7"
+        app:layout_constraintBottom_toBottomOf="@+id/progressIndicator"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/stepsCount" />
+        app:layout_constraintTop_toTopOf="@+id/progressIndicator" />
 
     <TextView
         android:id="@+id/goalField"
-        android:layout_width="149dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="319dp"
+        android:layout_width="153dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginBottom="38dp"
         android:text="Goal Not Set"
         android:textAlignment="center"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/remainderButton"
+        android:textSize="23sp"
+        app:layout_constraintBottom_toBottomOf="@+id/progressIndicator"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view" />
+        app:layout_constraintTop_toTopOf="@+id/view" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
